[package]
description = "A tiny trait to format a serializable struct using custom placeholders"
edition = "2021"
license = "MIT"
name = "serde-format"
repository = "https://github.com/imbolc/serde-format"
version = "0.1.0"

[dependencies]
displaydoc = "0.2"
serde = "1"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
rusty-hook = "0.11"
serde = { version = "1", features = ["derive"] }
